<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_blue_light"
                android:id="@+id/botonPosicionActual2">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ubicaci_n_actual"
                    android:id="@+id/textoPosActual"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/gps"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/textoPosActual"
                    android:layout_toStartOf="@+id/textoPosActual" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_green_light"
                android:id="@+id/botonBusquedaMunicipios">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/municipios"
                    android:id="@+id/textView3"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView4"
                    android:src="@android:drawable/ic_search_category_default"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/textView3"
                    android:layout_toStartOf="@+id/textView3" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_red_light"
                android:id="@+id/botonBusquedaProvincias">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/provincias"
                    android:id="@+id/textView7"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView5"
                    android:src="@android:drawable/ic_search_category_default"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/textView7"
                    android:layout_toStartOf="@+id/textView7" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_purple"
                android:id="@+id/botonBusquedaCCAA">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/comunidades_autonomas"
                    android:id="@+id/textView8"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView6"
                    android:src="@android:drawable/ic_search_category_default"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/textView8"
                    android:layout_toStartOf="@+id/textView8" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_orange_light"
                android:id="@+id/botonSobreAplicacion">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sobre_la_aplicaci_n"
                    android:id="@+id/textView9"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>